--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.0",
-    "typescript": "^5.2.2",
-    "vue-tsc": "^1.8.8"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare"
+    },
+    "devDependencies": {
+        "@nuxt/devtools": "latest",
+        "nuxt": "^3.7.0",
+        "typescript": "^5.2.2",
+        "vue-tsc": "^1.8.8",
+        "@types/google.maps": "^3.50.5"
+    }
 }
