--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
     },
     "devDependencies": {
         "@nuxt/devtools": "latest",
+        "@nuxtjs/tailwindcss": "^6.12.1",
+        "@primevue/nuxt-module": "^4.0.7",
         "@types/google.maps": "^3.50.5",
-        "autoprefixer": "^10.4.19",
         "nuxt": "^3.11.2",
-        "nuxt-primevue": "^3.0.0",
-        "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.3",
         "typescript": "^5.2.2",
         "vue-tsc": "^1.8.8"
     },
     "dependencies": {
+        "@primevue/themes": "^4.0.7",
         "primeicons": "^7.0.0",
-        "primevue": "^3.52.0"
+        "primevue": "^4.0.7"
     }
 }
