--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     },
     "devDependencies": {
         "@nuxt/devtools": "latest",
+        "@nuxt/types": "^2.18.1",
         "@nuxtjs/tailwindcss": "^6.12.1",
         "@pinia/nuxt": "^0.7.0",
         "@primevue/nuxt-module": "^4.0.7",
         "@types/google.maps": "^3.50.5",
         "nuxt": "^3.13.2",
-        "typescript": "^5.2.2",
-        "vue-tsc": "^2.1.6"
+        "typescript": "^5.7.2",
+        "vue-tsc": "^2.1.10"
     },
     "dependencies": {
         "@primevue/themes": "^4.0.7",
