--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@primevue/themes": "^4.0.7",
+        "chart.js": "^4.4.7",
         "primeicons": "^7.0.0",
         "primevue": "^4.0.7"
     }
