update env variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-GMAPS_API: ""
-DEV_BACKEND_API_HOST: "http://192.168.0.27:8080"
+NUXT_PUBLIC_GMAPS_API: "api_key"
+NUXT_PUBLIC_BACKEND_HOST: "http://localhost:8080"
