--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nuxt-app",
+    "name": "geobattles-frontend",
     "private": true,
     "scripts": {
         "build": "nuxt build",
