--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     },
     "dependencies": {
         "@primevue/themes": "^4.0.7",
+        "@types/canvas-confetti": "^1.9.0",
+        "canvas-confetti": "^1.9.3",
         "chart.js": "^4.4.7",
         "pinia": "^3.0.1",
         "primeicons": "^7.0.0",
